turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: method value has return statement; needs result type
	if(c==colors(i)){return n}
                         ^LangtonsAnt:14: error: method value has return statement; needs result type
	return n	
        ^LangtonsAnt:18: error: type mismatch;
 found   : Unit
 required: Int
var l:Int=value()
               ^